
5.0.0 2023/09/xx
  - BREAKING - s3Compression/simpleCompression now default to zstd
  - BREAKING - s3WriteGzip removed, use s3Compression=gzip
  - BREAKING - s3GapPacketPos defaults to TRUE
  - BREAKING - enablePacketDedup defaults to TRUE
  - BREAKING - authMode defaults to digest now
  - BREAKING - removed old v1 APIs
  - all - authMode setting added
  - all - authMode=basic added
  - capture - moloch converted to arkime
  - capture - override ips can now set any field
  - capture - overrideIpsFiles setting
  - capture - packetDropIpsFiles setting
  - viewer - removed x-moloch-auth


4.3.3 2023/07/xx
  - release - cyberchef 10.5.2
  - all - improved json verification
  - all - fix password changing permission checks
  - all - better logging when requiredAuthHeader fails
  - capture - handle port reuse better
  - capture - fix kafka memory leak when produce fails
  - cont3xt - New overview cards
  - parliament - fix parliament clean start not letting auth be set up
  - viewer - gtp decoding
  - viewer - demo mode improvements, arkimeAdmin can use normally

4.3.2 2023/06/13
  - release - cyberchef 10.4.0 libpcap 1.10.4
  - all - config 'prefix' can be at most 50 characters
  - all - new cookie generation code
  - capture - handle packets better at epoch time
  - cont3xt - add twilio country code tidbit
  - cont3xt - add httpRealm to sample config
  - cont3xt - help improvements
  - cont3xt - minor UI improvements
  - db.pl - set ISM deleteTime for sessions correctly
  - esproxy - add tests
  - parliament - fixed occasional missing token error
  - viewer/wise - Field/Value actions now support all:true to show on every instance
  - viewer - Fix Src/Dst mouse over for packets/bytes
  - viewer - Field Actions didn't work in expanded meta
  - viewer - Fix sending/receiving sessions not working

4.3.1 2023/05/08
  - BREAKING - If running mixed versions of Arkime, broken cron queries error
               might show on OLD version
  - release - fix ubuntu22 kafka dep