@@ -35,6 +35,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - BREAKING - enablePacketDedup defaults to TRUE
   - BREAKING - authMode defaults to digest now
   - BREAKING - removed old v1 APIs
+  - BREAKING - parliament password removed, must configure common auth before upgrade
   - all - authMode setting added
   - all - authMode=basic added
   - capture - moloch converted to arkime
@@ -42,6 +43,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - capture - overrideIpsFiles setting
   - capture - packetDropIpsFiles setting
   - viewer - removed x-moloch-auth
+  - parliament - dashboard-only mode removed, if you want users to just see
+                 the dashboard don't assign them the parliamentUser role
 
 
 4.3.3 2023/07/xx
